Import of AARONJJ/Class-DBI-Plugin-FilterOnClick-1.2 from CPAN.
gitpan-cpan-distribution: Class-DBI-Plugin-FilterOnClick
gitpan-cpan-version:      1.2
gitpan-cpan-path:         AARONJJ/Class-DBI-Plugin-FilterOnClick-1.2.tar.gz
gitpan-cpan-author:       AARONJJ
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension Class::DBI::Plugin::FilterOnClick.
 (Previously known as Class::DBI::Plugin::HTML)
 
+1.2
+    * Corrected issue with Makefile.PL format based on bug:
+    http://rt.cpan.org/Public/Bug/Display.html?id=33898
+
 1.1
 
     * Corrected searchable feature with column name case issue (no longer case
